[package]
name = "project-dir"
version = "0.1.0"
edition = "2021"
description = "A command-line utility to create a simple project command."
license = "GPL-3"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.2", features = ["yaml"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
