[package]
name = "project-dir"
version = "0.1.0"
edition = "2021"
description = "A CLI utility to create a simple shell command to activate a project."
license = "GPL-3"
publish = false
categories = ["command-line-utilities", "development-tools"]

[dependencies]
config = { version = "0.13.2", features = ["yaml"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }

[badges]
maintenance = { status = "experimental" }
